# lms-app

./: .gitignore  CMakeLists.txt  README.md  db.config.ini  inserts.sql  schema.sql
res/: config.db.ini  create.db.sql  db.res.qrc  insert.db.sql
src/: CMakeLists.txt
src/app/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/database/: mysqldb.cpp  mysqldb.h  mysqlquery.cpp  mysqlquery.h
src/gui/: librarianportal.cpp  librarianportal.h  librarianportal.ui  loginform.cpp  loginform.h  loginform.ui  userportal.cpp  userportal.h  userportal.ui
src/managers/: bookmanager.cpp  bookmanager.h  bookmanager.ui  checkoutbook.ui  returnbook.ui  searchbook.ui  transacmanager.cpp  transacmanager.h
src/models/: bookmanager.cpp  bookmanager.h  bookmanager.ui  checkoutbook.ui  datatable.cpp  datatable.h  returnbook.ui  transacmanager.cpp  transacmanager.h
src/utils/: bookqueries.h  qutils.cpp  qutils.h  transacqueries.h  userqueries.h
test/: CMakeLists.txt  testmysqldb.cpp
